--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Index page</title>
     <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="./css/styles.сss">
+    <link rel="stylesheet" href="./css/styles.css">
   </head>
   <body style="display: flex; flex-direction: column; min-height: 100vh; margin: 0; background-color: #20242F; color: #fff;">
     <div class="index-page" style="padding: 40px 0; font-family: 'Montserrat', sans-serif; font-size: 16px; line-height: 1.2;">
